# calc2

./: .gitignore
src/: CMakeLists.txt  Makefile  controller.h  documentation.texi  model.cc  model.h  test.cc
src/calclogic/: CMakeLists.txt  credit.cc  credit.h  deposit.cc  deposit.h  model.cc  model.h
src/controller/: controller.cc  controller.h
src/controller/includes/: cl_controller.h  cr_controller.h  dp_controller.h
src/controller/sources/: cl_controller.cc  cr_controller.cc  dp_controller.cc
src/gui/: CMakeLists.txt  button.cc  button.h  creditcalc.cc  creditcalc.h  depositcalc.cc  depositcalc.h  main.cc  smartcalc.cc  smartcalc.h
src/model/: CMakeLists.txt  Makefile  calcul.cc
src/model/includes/: calcul.h  credit.h  deposit.h
src/model/sources/: calcul.cc  credit.cc  deposit.cc
src/model/tests/: calctest.cc  creditest.cc  depositest.cc
src/tests/: calctest.cc
src/view/: CMakeLists.txt  main.cc
src/view/includes/: button.h  creditcalc.h  depositcalc.h  smartcalc.h
src/view/qcustomplot/: qcustomplot.cpp
src/view/sources/: button.cc  creditcalc.cc  depositcalc.cc  smartcalc.cc
